--- a/sectors.ipynb
+++ b/sectors.ipynb
@@ -25,8 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import tensorflow as tf\n",
-    "import tensorflow_hub as hub\n",
-    "from imblearn.over_sampling import RandomOverSampler"
+    "import tensorflow_hub as hub"
    ]
   },
   {
