Added section results to the README file and debugged the data retrieval.

--- a/03_information_retrieval.ipynb
+++ b/03_information_retrieval.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# Information retrieval\n",
-    "The data is coming from TXT, CSV and JSON files that contain all tickers at a Stock Exchange. The observed exchanges are the NASDAQ, NYSE, AMEX, FSE, Bolsa de Madrid, London, Toronto, Tokyo."
+    "The data is coming from TXT, CSV and JSON files that contain the tickers for a stock exchange. The observed exchanges are the NASDAQ, NYSE, AMEX, FSE, Bolsa de Madrid, London SE, Toronto SE, Tokyo SE."
    ],
    "metadata": {
     "collapsed": false,
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -30,6 +30,7 @@
     "\n",
     "\n",
     "headers1 = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36'}\n",
+    "# alternative header\n",
     "headers2 = {\"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.102 Safari/537.36 Edge/18.19582\"}"
    ]
   },
@@ -47,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# NASDAQ, NYSE, AMEX\n",
     "for exchange in ['amex', 'nyse', 'nasdaq']:\n",
-    "    with open(f\"data_ticker/{exchange}.json\") as f:\n",
+    "    with open(f'02_data_ticker/{exchange}.json') as f:\n",
     "        if exchange == 'amex':\n",
     "            amex = json.load(f)\n",
     "        elif exchange == 'nyse':\n",
@@ -69,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# Frankfurt Stock Exchange (FSE)\n",
     "fse = []\n",
-    "with open(\"data_ticker/frankfurt.csv\") as f:\n",
+    "with open('02_data_ticker/frankfurt.csv') as f:\n",
     "    reader = csv.reader(f)\n",
     "    # omit the header row\n",
     "    next(reader)\n",
@@ -100,12 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# Bolsa de Madrid\n",
     "madrid = []\n",
-    "with open(\"data_ticker/madrid.csv\") as f:\n",
+    "with open('02_data_ticker/madrid.csv') as f:\n",
     "    reader = csv.reader(f)\n",
     "    next(reader)\n",
     "\n",
@@ -128,19 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "# London Stock Exchange (LSE)\n",
     "lse = []\n",
-    "with open(\"data_ticker/london.csv\") as f:\n",
+    "with open('02_data_ticker/london.csv') as f:\n",
     "    reader = csv.reader(f)\n",
     "    next(reader)\n",
     "\n",
     "    for row in reader:\n",
     "        entry = row[0].split(';')\n",
     "        try:\n",
-    "            ticker = entry[4][:-1] + \".e\"\n",
+    "            ticker = entry[4][:-1] + \".l\"\n",
     "            lse.append([entry[0], ticker])\n",
     "\n",
     "        except IndexError as e:\n",
@@ -156,12 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "# Toronto Stock Exchange (TSE)\n",
     "toronto = []\n",
-    "with open(\"data_ticker/toronto_se.txt\") as f:\n",
+    "with open('02_data_ticker/toronto_se.txt') as f:\n",
     "    reader = csv.reader(f)\n",
     "    # omit the first rows\n",
     "    next(reader)\n",
@@ -187,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# Tokyo Stock Exchange (TSE)\n",
     "tokyo = []\n",
-    "with open(\"data_ticker/tokyo_se.csv\") as f:\n",
+    "with open('02_data_ticker/tokyo_se.csv') as f:\n",
     "    reader = csv.reader(f)\n",
     "    next(reader)\n",
     "    for row in reader:\n",
@@ -228,8 +229,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# amex, nyse, nasdaq, fse, madrid, lse, toronto, tokyo\n",
-    "tickers = amex\n",
+    "# options for tickers: amex, nyse, nasdaq, fse, madrid, lse, toronto, tokyo\n",
+    "tickers = fse\n",
     "url = 'https://finance.yahoo.com/quote/{}/profile?p={}'\n",
     "data = []\n",
     "count = 1\n",
@@ -273,7 +274,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Validation of the downloaded data"
+    "## Inspection of the downloaded data"
    ],
    "metadata": {
     "collapsed": false,
@@ -284,11 +285,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "{'name': 'ABCAM PLC',\n 'ticker': 'ABC.l',\n 'sector': 'Healthcare',\n 'description': 'Abcam plc, a life science company, focuses on identifying, developing, and distributing reagents and tools for scientific research, diagnostics, and drug discovery. Its principal products include primary and secondary antibodies; conjugated antibodies and conjugation kits; singleplex and multiplex immunoassays; proteins and peptides that include cytokines; edited cell lines and lysates; and various other products, including cellular activity kits, miRNA kits, biochemicals, and cell signaling pathway tools. The company serves scientists and researchers in academic institutions and research institutes, as well as in pharmaceutical, biotechnology, and diagnostics companies. It has operations in the Americas, Europe, the Middle East, Africa, China, Japan, and rest of the Asia Pacific. The company sells its products online. Abcam plc was incorporated in 1998 and is headquartered in Cambridge, the United Kingdom.'}"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "with open ('data/tokyo.json', encoding='utf8') as file:\n",
-    "    data = json.load(file)\n",
+    "file = 'london'\n",
+    "with open (f'04_extracted_data/{file}.json', encoding='utf8') as f:\n",
+    "    data = json.load(f)\n",
     "\n",
     "print(type(data))\n",
     "data[0]"
@@ -296,8 +314,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -315,10 +332,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amex.json\n",
+      "frankfurt.json\n",
+      "london.json\n",
+      "madrid.json\n",
+      "nasdaq1.json\n",
+      "nasdaq2.json\n",
+      "nyse.json\n",
+      "tokyo.json\n",
+      "toronto.json\n",
+      "extracted company descriptions and sectors:  9856\n"
+     ]
+    }
+   ],
    "source": [
-    "path_to_json = 'C:\\\\Users\\\\esse\\\\OneDrive\\\\Dokumente\\\\studium\\\\semester2\\\\NLP\\\\project\\\\data\\\\'\n",
+    "path_to_json = 'C:\\\\Users\\\\esse\\\\OneDrive\\\\Dokumente\\\\GitHub\\\\project_NLP\\\\04_extracted_data\\\\'\n",
     "\n",
     "final_list = []\n",
     "\n",
@@ -329,22 +363,21 @@
     "        for i in data:\n",
     "            final_list.append(i)\n",
     "\n",
-    "print(len(final_list))"
+    "print(\"extracted company descriptions and sectors: \", len(final_list))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "outputs": [],
    "source": [
-    "with open('data/data_complete.json', 'w') as f:\n",
+    "with open('data_raw.json', 'w') as f:\n",
     "    json.dump(final_list, f)"
    ],
    "metadata": {
