--- a/05_data_preparation.ipynb
+++ b/05_data_preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json('data_complete.json')\n",
+    "df = pd.read_json('data_raw.json')\n",
     "df = df[['description', 'sector']]\n",
     "\n",
     "# replace empty strings with nan values\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -94,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
-      "text/plain": "Financial Services        2503\nHealthcare                1452\nIndustrials               1307\nTechnology                1139\nConsumer Cyclical         1023\nBasic Materials            594\nReal Estate                489\nConsumer Defensive         410\nCommunication Services     403\nEnergy                     338\nUtilities                  164\nIndustrial Goods             4\nServices                     3\nFinancial                    3\nConsumer Goods               1\nName: sector, dtype: int64"
+      "text/plain": "Financial Services        2503\nHealthcare                1452\nIndustrials               1307\nTechnology                1139\nConsumer Cyclical         1023\nBasic Materials            594\nReal Estate                489\nConsumer Defensive         410\nCommunication Services     403\nEnergy                     338\nUtilities                  164\nIndustrial Goods             4\nFinancial                    3\nServices                     3\nConsumer Goods               1\nName: sector, dtype: int64"
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# consolidate data\n",
@@ -136,13 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "Financial Services        2509\nHealthcare                1452\nIndustrials               1311\nTechnology                1139\nConsumer Cyclical         1024\nBasic Materials            594\nEnergy & Utility           502\nReal Estate                489\nConsumer Defensive         410\nCommunication Services     403\nName: sector, dtype: int64"
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
-      "text/plain": "                                            description  \\\n0     Adara Acquisition Corp. does not have signific...   \n1     AIM ImmunoTech Inc., an immuno-pharma company,...   \n2     Ashford, Inc is an asset management firm. The ...   \n3     The Arena Group Holdings, Inc., together with ...   \n4     AMCON Distributing Company, together with its ...   \n...                                                 ...   \n9851  asknet Solutions AG provides e-commerce soluti...   \n9852  audius SE, through its subsidiaries, provides ...   \n9853  BAVARIA Industries Group AG, an industrial hol...   \n9854  CeoTronics AG provides systems for mobile digi...   \n9855  Clean Logistics SE operates in the transport i...   \n\n                      sector  \n0         Financial Services  \n1                 Healthcare  \n2         Financial Services  \n3     Communication Services  \n4         Consumer Defensive  \n...                      ...  \n9851              Technology  \n9852              Technology  \n9853      Financial Services  \n9854              Technology  \n9855       Consumer Cyclical  \n\n[9833 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>description</th>\n      <th>sector</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Adara Acquisition Corp. does not have signific...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>AIM ImmunoTech Inc., an immuno-pharma company,...</td>\n      <td>Healthcare</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ashford, Inc is an asset management firm. The ...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>The Arena Group Holdings, Inc., together with ...</td>\n      <td>Communication Services</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>AMCON Distributing Company, together with its ...</td>\n      <td>Consumer Defensive</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>9851</th>\n      <td>asknet Solutions AG provides e-commerce soluti...</td>\n      <td>Technology</td>\n    </tr>\n    <tr>\n      <th>9852</th>\n      <td>audius SE, through its subsidiaries, provides ...</td>\n      <td>Technology</td>\n    </tr>\n    <tr>\n      <th>9853</th>\n      <td>BAVARIA Industries Group AG, an industrial hol...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>9854</th>\n      <td>CeoTronics AG provides systems for mobile digi...</td>\n      <td>Technology</td>\n    </tr>\n    <tr>\n      <th>9855</th>\n      <td>Clean Logistics SE operates in the transport i...</td>\n      <td>Consumer Cyclical</td>\n    </tr>\n  </tbody>\n</table>\n<p>9833 rows × 2 columns</p>\n</div>"
+      "text/plain": "                                            description  \\\n0     Adara Acquisition Corp. does not have signific...   \n1     AIM ImmunoTech Inc., an immuno-pharma company,...   \n2     Ashford, Inc is an asset management firm. The ...   \n3     The Arena Group Holdings, Inc., together with ...   \n4     AMCON Distributing Company, together with its ...   \n...                                                 ...   \n9851  Wheaton Precious Metals Corp., a streaming com...   \n9852  Westport Fuel Systems Inc. engages in the engi...   \n9853  Western Copper and Gold Corporation, an explor...   \n9854  Xanadu Mines Limited engages in the exploratio...   \n9855  Yamana Gold Inc., together with its subsidiari...   \n\n                      sector  \n0         Financial Services  \n1                 Healthcare  \n2         Financial Services  \n3     Communication Services  \n4         Consumer Defensive  \n...                      ...  \n9851         Basic Materials  \n9852       Consumer Cyclical  \n9853         Basic Materials  \n9854         Basic Materials  \n9855         Basic Materials  \n\n[9833 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>description</th>\n      <th>sector</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Adara Acquisition Corp. does not have signific...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>AIM ImmunoTech Inc., an immuno-pharma company,...</td>\n      <td>Healthcare</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ashford, Inc is an asset management firm. The ...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>The Arena Group Holdings, Inc., together with ...</td>\n      <td>Communication Services</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>AMCON Distributing Company, together with its ...</td>\n      <td>Consumer Defensive</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>9851</th>\n      <td>Wheaton Precious Metals Corp., a streaming com...</td>\n      <td>Basic Materials</td>\n    </tr>\n    <tr>\n      <th>9852</th>\n      <td>Westport Fuel Systems Inc. engages in the engi...</td>\n      <td>Consumer Cyclical</td>\n    </tr>\n    <tr>\n      <th>9853</th>\n      <td>Western Copper and Gold Corporation, an explor...</td>\n      <td>Basic Materials</td>\n    </tr>\n    <tr>\n      <th>9854</th>\n      <td>Xanadu Mines Limited engages in the exploratio...</td>\n      <td>Basic Materials</td>\n    </tr>\n    <tr>\n      <th>9855</th>\n      <td>Yamana Gold Inc., together with its subsidiari...</td>\n      <td>Basic Materials</td>\n    </tr>\n  </tbody>\n</table>\n<p>9833 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
-      "text/plain": "                                            description              sector\n0     Adara Acquisition Corp. does not have signific...  Financial Services\n2     Ashford, Inc is an asset management firm. The ...  Financial Services\n5     Aberdeen Emerging Markets Equity Income Fund, ...  Financial Services\n7     Aberdeen Australia Equity Fund, Inc. is a clos...  Financial Services\n11    Allspring Multi-Sector Income Fund is a closed...  Financial Services\n...                                                 ...                 ...\n9840  NÜRNBERGER Beteiligungs-AG operates as an insu...  Financial Services\n9842  ÖKOWORLD AG, together with its subsidiaries, p...  Financial Services\n9846  Scherzer & Co. AG is a publicly owned investme...  Financial Services\n9847  The NAGA Group AG develops technologies for th...  Financial Services\n9853  BAVARIA Industries Group AG, an industrial hol...  Financial Services\n\n[2509 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>description</th>\n      <th>sector</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Adara Acquisition Corp. does not have signific...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ashford, Inc is an asset management firm. The ...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Aberdeen Emerging Markets Equity Income Fund, ...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Aberdeen Australia Equity Fund, Inc. is a clos...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>Allspring Multi-Sector Income Fund is a closed...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>9840</th>\n      <td>NÜRNBERGER Beteiligungs-AG operates as an insu...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>9842</th>\n      <td>ÖKOWORLD AG, together with its subsidiaries, p...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>9846</th>\n      <td>Scherzer &amp; Co. AG is a publicly owned investme...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>9847</th>\n      <td>The NAGA Group AG develops technologies for th...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>9853</th>\n      <td>BAVARIA Industries Group AG, an industrial hol...</td>\n      <td>Financial Services</td>\n    </tr>\n  </tbody>\n</table>\n<p>2509 rows × 2 columns</p>\n</div>"
+      "text/plain": "                                            description              sector\n0     Adara Acquisition Corp. does not have signific...  Financial Services\n2     Ashford, Inc is an asset management firm. The ...  Financial Services\n5     Aberdeen Emerging Markets Equity Income Fund, ...  Financial Services\n7     Aberdeen Australia Equity Fund, Inc. is a clos...  Financial Services\n11    Allspring Multi-Sector Income Fund is a closed...  Financial Services\n...                                                 ...                 ...\n9798  Royal Bank of Canada operates as a diversified...  Financial Services\n9803  Sprott Inc. is a publicly owned asset manageme...  Financial Services\n9806  Sun Life Financial Inc., a financial services ...  Financial Services\n9823  The Toronto-Dominion Bank, together with its s...  Financial Services\n9841  VersaBank, a schedule I chartered bank, provid...  Financial Services\n\n[2509 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>description</th>\n      <th>sector</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Adara Acquisition Corp. does not have signific...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ashford, Inc is an asset management firm. The ...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Aberdeen Emerging Markets Equity Income Fund, ...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Aberdeen Australia Equity Fund, Inc. is a clos...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>Allspring Multi-Sector Income Fund is a closed...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>9798</th>\n      <td>Royal Bank of Canada operates as a diversified...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>9803</th>\n      <td>Sprott Inc. is a publicly owned asset manageme...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>9806</th>\n      <td>Sun Life Financial Inc., a financial services ...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>9823</th>\n      <td>The Toronto-Dominion Bank, together with its s...</td>\n      <td>Financial Services</td>\n    </tr>\n    <tr>\n      <th>9841</th>\n      <td>VersaBank, a schedule I chartered bank, provid...</td>\n      <td>Financial Services</td>\n    </tr>\n  </tbody>\n</table>\n<p>2509 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 66,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "data_dict = df.to_dict('records')\n",
